assignments/07-csv/6CHUC
  File "./blastomatic.py", line 69
    print("\"{}\"" is not a file".format(file))
                               ^
SyntaxError: invalid syntax
